Added branding support. Added mass institution assignment infrastructure. Added tests. Improved and refactored IF table computation.